tasks/coverage/snapshots/postcss_parser/rule-at.txt
hdx_parser::Unimplemented

  × This block cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/rule-at.css:2:1]
 2 │     width: 10px;
 3 │     margin: 0 @width;
   ·             ┬
   ·             ╰── Didn't recognise this bit
 4 │     @mixin mobile {
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
   ╭─[tasks/coverage/postcss-parser-tests/cases/rule-at.css:2:1]
 2 │     width: 10px;
 3 │     margin: 0 @width;
   ·     ────────┬───────
   ·             ╰── This property was ignored.
 4 │     @mixin mobile {
   ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
hdx_parser::Unimplemented

  × This block cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/rule-at.css:3:1]
 3 │     margin: 0 @width;
 4 │     @mixin mobile {
   ·     ───┬──
   ·        ╰── Didn't recognise this bit
 5 │         height: 100px;
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
